Further Registration Integration
Further Registration Integration

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,3 +2,8 @@
     background: #a10020 !important;
     color: #f0506e;
 }
+
+.uk-alert-success {
+    background: #009d34 !important;
+    color: #32d296;
+}
