--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,6 +3,15 @@
     color: #f0506e;
 }
 
+label.uk-form-label.uk-text-left {
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji" !important;
+    font-weight: 500 !important;
+    font-size: 16px !important;
+    color: white !important;
+    float: left;
+    margin-bottom: 10px;
+}
+
 .add-client-model {
     background: #132653;
     text-align: center;
